Day1/충남 3/src/eks/manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsc2026-book-ingres
  namespace: wsc2026
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: wsc2026-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/security-groups: SECURITY_GROUP_ID
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '3'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/conditions.wsc2026-book-svc: >
      [{"field":"http-request-method","httpRequestMethodConfig":{"Values":["POST"]}}]
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"Restrict access to api"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/book
        pathType: Prefix
        backend:
          service:
            name: wsc2026-book-svc
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: wsc2026-book-svc
            port:
              number: 80
  defaultBackend:
      service:
        name: response-403
        port:
          name: use-annotation
